--- a/K_Bridge/Views/Shared/LayoutBoxChat.cshtml
+++ b/K_Bridge/Views/Shared/LayoutBoxChat.cshtml
@@ -1,1 +1,60 @@
-﻿<a href="#" class="btn btn-primary">test boxchat</a>
+﻿
+<div class=" d-flex flex-column mt-4 border-main-color-layout border-2 h-auto w-auto rounded-8" style="max-width: 300px;  margin-left: 40px;">
+    <button class="flex-grow-0 border-main-color-header border-bottom p-3 rounded-3 h-50 d-lg-inline-flex justify-content-lg-between">
+        <div class=" text-uppercase">Bình luận</div>
+        <img src="/img/arrow_down.png" alt="arow_down" />
+    </button>
+
+    <div class="rounded-3 overflow-auto flex-grow-1 mx-lg-3 d-flex flex-column-reverse" style="height: 460px;">
+        <div id="chat-messages" class="d-flex flex-column-reverse justify-content-end">
+            <div class="mb-2 d-md-flex flex-column">
+                <div class="d-md-flex align-items-center">
+                    <img src="/img/avatar.png" alt="avatar" class="me-2 rounded-circle" style="width: 20px; height: 20px;" />
+                    <div class="fs-12 text-color-logo mb-1 fw-bold flex-grow-1">Tên tài khoản</div>
+                </div>  
+                <div class="message fs-12 rounded-3 text-color-logo mb-1 word-break-all" style="margin-right: 4px;">Tin nhắn của bạn </div>
+            </div> 
+            <div class="mb-2 d-md-flex flex-column">
+                <div class="d-md-flex align-items-center">
+                    <img src="/img/avatar.png" alt="avatar" class="me-2 rounded-circle" style="width: 20px; height: 20px;" />
+                    <div class="fs-12 text-color-logo mb-1 fw-bold flex-grow-1">Tên tài khoản</div>
+                </div>
+                <div class="message fs-12 rounded-3 text-color-logo mb-1 word-break-all">Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn</div>
+            </div>
+            <div class="mb-2 d-md-flex flex-column">
+                <div class="d-md-flex align-items-center">
+                    <img src="/img/avatar.png" alt="avatar" class="me-2 rounded-circle" style="width: 20px; height: 20px;" />
+                    <div class="fs-12 text-color-logo mb-1 fw-bold flex-grow-1">Tên tài khoản</div>
+                </div>  
+                <div class="message fs-12 rounded-3 text-color-logo mb-1 word-break-all" style="margin-right: 4px;">Tin nhắn của bạn </div>
+            </div> 
+            <div class="mb-2 d-md-flex flex-column">
+                <div class="d-md-flex align-items-center">
+                    <img src="/img/avatar.png" alt="avatar" class="me-2 rounded-circle" style="width: 20px; height: 20px;" />
+                    <div class="fs-12 text-color-logo mb-1 fw-bold flex-grow-1">Tên tài khoản</div>
+                </div>
+                <div class="message fs-12 rounded-3 text-color-logo mb-1 word-break-all">Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn</div>
+            </div>
+            <div class="mb-2 d-md-flex flex-column">
+                <div class="d-md-flex align-items-center">
+                    <img src="/img/avatar.png" alt="avatar" class="me-2 rounded-circle" style="width: 20px; height: 20px;" />
+                    <div class="fs-12 text-color-logo mb-1 fw-bold flex-grow-1">Tên tài khoản</div>
+                </div>
+                <div class="message fs-12 rounded-3 text-color-logo mb-1 word-break-all" style="margin-right: 4px;">Tin nhắn của bạn </div>
+            </div>
+            <div class="mb-2 d-md-flex flex-column">
+                <div class="d-md-flex align-items-center">
+                    <img src="/img/avatar.png" alt="avatar" class="me-2 rounded-circle" style="width: 20px; height: 20px;" />
+                    <div class="fs-12 text-color-logo mb-1 fw-bold flex-grow-1">Tên tài khoản</div>
+                </div>
+                <div class="message fs-12 rounded-3 text-color-logo mb-1 word-break-all">Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn</div>
+            </div>
+        </div>
+    </div>
+    <div class="mx-3 my-2 input-group w-auto rounded-8 bg-main-color-btn ">
+        <input type="text" class="flex-grow-1 fs-12 text-color-logo rounded-8 w-auto px-2 focus bg-main-color-btn" placeholder="Nhập nội dung...">
+        <button type="button" class="btn">
+            <img src="~/img/send.png" alt="Send" class="opacity-75"/>
+        </button>
+    </div>
+</div>
