--- a/K_Bridge/Views/Shared/LayoutHeader.cshtml
+++ b/K_Bridge/Views/Shared/LayoutHeader.cshtml
@@ -7,8 +7,8 @@
             </div>
         </div>
         <div class="col col-md-7 d-flex justify-content-center">
-            <div class="input-group rounded-2 border px-2" style="max-width: 420px;">
-                <input type="text" class="form-control bg-transparent border-0 text-color-layout" placeholder="Tìm kiếm..." aria-label="Search" aria-describedby="button-addon2">
+            <div class="input-group rounded-2 border border-main-color-layout px-2" style="max-width: 420px;">
+                <input type="text" class="focus flex-grow-1 bg-transparent text-color-layout" placeholder="Tìm kiếm..." aria-label="Search" aria-describedby="button-addon2">
                 <button class="btn btn-main-color-header" type="button" id="button-addon2">
                     <img src="/img/iconSearch.png" alt="Search Icon">
                 </button>
