--- a/K_Bridge/Views/Shared/LayoutCategory.cshtml
+++ b/K_Bridge/Views/Shared/LayoutCategory.cshtml
@@ -1,13 +1,13 @@
 ﻿<nav>
-    <h5 class="text-color-logo mt-4">Chuyên mục đáng chú ý</h5>
+    <h5 class="text-color-logo mt-4">Diễn đàn đáng chú ý</h5>
     @foreach (var category in ViewBag.Categories ?? Enumerable.Empty<Category>())
     {
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-auto">
-                    <img class="p-0 w-32 h-auto mt-2" src="~/img/@Url.Content(category.LinkIcon)" alt="@category.Name" />
+            <div class="row align-items-center cursor">
+                <div class="col-auto p-0 my-2">
+                    <img class="p-0 m-0 w-32 h-auto mt-2" src="~/img/@Url.Content(category.LinkIcon)" alt="@category.LinkIcon" />
                 </div>
-                <div class="col d-none d-md-block">
+                <div class="col">
                     <div class="row w-auto text-wrap m-0">
                         <p class="p-0 m-0 text-color-logo fs-6">@category.Name</p>
                     </div>
