--- a/K_Bridge/Views/Shared/LayoutPost.cshtml
+++ b/K_Bridge/Views/Shared/LayoutPost.cshtml
@@ -1,3 +1,3 @@
-﻿<div style="max-width: 280px;" class="mt-2">
+﻿<div style="max-width: 300px;  margin-left: 40px;" class="mt-2 justify-content-end">
     <button type="button" class="btn btn-post text-uppercase fs-6" style="width:100%;">Đăng chủ đề mới</button>
 </div>
