--- a/K_Bridge/Views/Shared/_Layout.cshtml
+++ b/K_Bridge/Views/Shared/_Layout.cshtml
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="/lib/bootstrap/css/Style.css" rel="stylesheet" />
+    <link href="/css/Style.css" rel="stylesheet" />
     <link href="/css/styles.css" rel="stylesheet" />
     <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
@@ -13,8 +13,8 @@
     <header class="header bg-main-color-header d-flex">
         @await Html.PartialAsync("LayoutHeader")
     </header>
-    <div class="container-fluid">
-        <div class="row main-content mt-4 mx-3">
+    <div class="container-fluid h-auto">
+        <div class="row main-content mt-4 mx-3 h-auto">
             <div class="col-md-3 sidebar">
                 @await Html.PartialAsync("LayoutCategory")
                 @await Html.PartialAsync("LayoutStats")
@@ -24,18 +24,18 @@
                     @RenderBody()
                 </main>
             </div>
-            <div class="col-md-3 sidebar">
+            <div class="col-md-3 sidebar ">
                 @await Html.PartialAsync("LayoutPost")
                 @await Html.PartialAsync("LayoutBoxChat")
             </div>
         </div>
     </div>
 
-    <footer class="border-top footer text-muted">
+@*     <footer class="border-top text-muted bg-main-color-background">
         <div class="container">
-            &copy; 2024 - K_Bridge_Website - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+           <div class="">Foot</div>
         </div>
-    </footer>
+    </footer> *@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
