--- a/K_Bridge/Views/Shared/LayoutBoxChat.cshtml
+++ b/K_Bridge/Views/Shared/LayoutBoxChat.cshtml
@@ -6,13 +6,13 @@
     </button>
 
     <div class="rounded-3 overflow-auto flex-grow-1 mx-lg-3 d-flex flex-column-reverse" style="height: 460px;">
-        <div id="chat-messages" class="d-flex flex-column-reverse justify-content-end">
-            <div class="mb-2 d-md-flex flex-column">
+        <div class="d-flex flex-column-reverse justify-content-end">
+            <div class="d-md-flex flex-column">
                 <div class="d-md-flex align-items-center">
                     <img src="/img/avatar.png" alt="avatar" class="me-2 rounded-circle" style="width: 20px; height: 20px;" />
                     <div class="fs-12 text-color-logo mb-1 fw-bold flex-grow-1">Tên tài khoản</div>
                 </div>  
-                <div class="message fs-12 rounded-3 text-color-logo mb-1 word-break-all" style="margin-right: 4px;">Tin nhắn của bạn </div>
+                <div class="message fs-12 rounded-3 text-color-logo mb-1 word-break-all">Tin nhắn của bạn </div>
             </div> 
             <div class="mb-2 d-md-flex flex-column">
                 <div class="d-md-flex align-items-center">
