--- a/K_Bridge/Views/Shared/LayoutHeader.cshtml
+++ b/K_Bridge/Views/Shared/LayoutHeader.cshtml
@@ -2,7 +2,7 @@
     bool isLoggedIn = false;
 }
 
-<div class="container-fluid px-5 py-3 py-md-4" style="max-width: 97%;">
+<div class="container-fluid  py-md-4" style="max-width: 97%;">
     <div class="row align-items-center" >
         <div class="col-auto col-md-2">
             <div class="d-flex align-items-center">
