--- a/K_Bridge/Views/Shared/_Layout.cshtml
+++ b/K_Bridge/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
                     @await Html.PartialAsync("LayoutPost")
                     @await Html.PartialAsync("LayoutBoxChat")
                 </div>
+            </div>
         </div>
     </div>
 
