Admin login, layout basic

--- a/K_Bridge/Pages/_ViewImports.cshtml
+++ b/K_Bridge/Pages/_ViewImports.cshtml
@@ -1,6 +1,8 @@
-﻿@using K_Bridge
+﻿@namespace K_Bridge.Pages
+@using Microsoft.AspNetCore.Mvc.RazorPages
 @using K_Bridge.Models
 @using K_Bridge.Infrastructure
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, K_Bridge
+
