--- a/K_Bridge/Views/Shared/_Layout.cshtml
+++ b/K_Bridge/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <link href="/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - K Bridge</title>
+    <title>@ViewData["Title"]</title>
 </head>
 <body>
     <header class="header bg-main-color-header d-flex">
