--- a/K_Bridge/Views/Shared/Components/AdminNavigationMenu/Default.cshtml
+++ b/K_Bridge/Views/Shared/Components/AdminNavigationMenu/Default.cshtml
@@ -1,9 +1,9 @@
 ﻿<ul class="nav flex-column" id="nav_accordion">
     <li class="nav-item sidebar-title">
-        <h4>Trang điều khiển</h4>
+        <h5>TRANG ĐIỀU KHIỂN</h5>
     </li>
     <li class="nav-item mt-3">
-        <a class="nav-link nav-link-text" href="#">
+        <a class="nav-link nav-link-text" href="/admin/dashboard">
             <img src="~/img/icon_dashboard_50.png" class="sidebar-icon" /> Tổng quan
         </a>
     </li>
