--- a/K_Bridge/Pages/Admin/Dashboard.cshtml
+++ b/K_Bridge/Pages/Admin/Dashboard.cshtml
@@ -3,4 +3,65 @@
 @{
     ViewData["Title"] = "Trang chủ";
 }
-<h4>This is Dashboard page</h4>
+<div class="row dashboard-welcome-text mx-5 mt-5">
+    Xin chào, admin1
+</div>
+<div class="row mx-5 h-25 w-100 mt-5">
+    <div class="col-4 ">
+        <div class="dashboard-card pt-2 px-4">
+            <div class="row align-items-center">
+                <div class="col-6 dashboard-card-title d-flex justify-content-start">
+                    Chủ đề
+                </div>
+                <div class="col-3"></div>
+                <img src="/img/icon_table_50_dark.png"
+                     class="col-3 d-flex justify-content-end px-4" alt="Chủ đề" width="20" height="20">
+            </div>
+            <div class="row d-flex justify-content-center mt-2 dashboard-card-number">
+                30.000
+            </div>
+            <div class="row d-flex justify-content-end dashboard-card-plus-number">
+                +11
+            </div>
+        </div>
+    </div>
+    
+    <div class="col-4">
+        <div class="dashboard-card pt-2 px-4">
+            <div class="row align-items-center">
+                <div class="col-6 dashboard-card-title d-flex justify-content-start">
+                    Bài viết
+                </div>
+                <div class="col-3"></div>
+                <img src="/img/icon_fire_50_dark.png"
+                     class="col-3 d-flex justify-content-end px-4" alt="Bài viết" width="20" height="20">
+            </div>
+            <div class="row d-flex justify-content-center mt-2 dashboard-card-number">
+                1.235
+            </div>
+            <div class="row d-flex justify-content-end dashboard-card-plus-number">
+                -13
+            </div>
+        </div>
+
+    </div>
+    <div class="col-4">
+        <div class="dashboard-card pt-2 px-4">
+            <div class="row align-items-center">
+                <div class="col-6 dashboard-card-title d-flex justify-content-start">
+                    Tài khoản
+                </div>
+                <div class="col-3"></div>
+                <img src="/img/icon_user_50_dark.png"
+                     class="col-3 d-flex justify-content-end px-3" alt="Tài khoản" width="20" height="30">
+            </div>
+            <div class="row d-flex justify-content-center mt-2 dashboard-card-number">
+               500
+            </div>
+            <div class="row d-flex justify-content-end dashboard-card-plus-number">
+                +1
+            </div>
+        </div>
+
+    </div>
+</div>
