--- a/K_Bridge/wwwroot/css/Admin.css
+++ b/K_Bridge/wwwroot/css/Admin.css
@@ -1,4 +1,5 @@
-﻿#login-background {
+﻿/*----------------------- ADMIN LOGIN -----------------------*/
+#login-background {
     background-image: url('/img/admin_background.png');
     background-size: cover;
     background-position: center;
@@ -76,6 +77,7 @@
     line-height: 1.8;
 }
 
+/*----------------------- ADMIN LAYOUT -----------------------*/
 #header-container {
     background: #8E6745;
     width: 100%;
@@ -130,32 +132,30 @@
     background: #8E6745;
     position: sticky;
     min-height: 100vh;
-
 }
 
 .sidebar-title {
     color: #FFF0E6;
     text-align: center;
     margin-top: 30px;
-    font-size:5px;
+    font-size: 5px;
 }
 
 .sidebar-icon {
     width: 25px;
     height: 25px;
     margin-right: 15px;
-    margin-left:5px;
+    margin-left: 5px;
 }
 
 .sidebar li .submenu {
     list-style: none;
-    
 }
 
 .sidebar .nav-link {
     font-weight: 500;
     color: #FFF0E6;
-    font-size:17px;
+    font-size: 17px;
 }
 
     .sidebar .nav-link:hover {
@@ -172,12 +172,57 @@
     width: 20px;
     height: 20px;
     margin-right: 10px;
-    margin-left:-10px;
+    margin-left: -10px;
 }
 
 .nav-link.active {
     border-left: 4px solid #FFF0E6;
     background-color: #A47852;
     border-radius: 5px;
+}
+
+#admin-background {
+    background-image: url('/img/admin_background_2.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+}
+
+/*----------------------- ADMIN DASHBOARD -----------------------*/
+.dashboard-welcome-text {
+    font-weight: 500;
+    color: black;
+    font-size: 25px;
+}
+
+.dashboard-card {
+    background: #FFBE98;
+    border-radius: 5px;
+    width: 75%;
+    height: 80%;
+}
+
+.dashboard-card-title {
+    font-weight: 500;
+    color: #493422;
+    font-size: 25px;
+}
+
+.dashboard-card-icon {
+    width:30px;
+    height:30px;
+}
+
+.dashboard-card-number {
+    font-weight: 800;
+    color: #493422;
+    font-size: 35px;
+}
+
+.dashboard-card-plus-number {
+    font-weight: 800;
+    color: #8E6745;
+    font-size: 20px;
 }
 
