Admin Account table

--- a/K_Bridge/Pages/Admin/Dashboard.cshtml
+++ b/K_Bridge/Pages/Admin/Dashboard.cshtml
@@ -15,9 +15,9 @@
                 </div>
                 <div class="col-3"></div>
                 <img src="/img/icon_table_50_dark.png"
-                     class="col-3 d-flex justify-content-end px-4" alt="Chủ đề" width="20" height="20">
+                     class="col-3 d-flex justify-content-end px-4 h-25" alt="Chủ đề">
             </div>
-            <div class="row d-flex justify-content-center mt-2 dashboard-card-number">
+            <div class="row d-flex justify-content-center dashboard-card-number">
                 30.000
             </div>
             <div class="row d-flex justify-content-end dashboard-card-plus-number">
@@ -25,7 +25,6 @@
             </div>
         </div>
     </div>
-    
     <div class="col-4">
         <div class="dashboard-card pt-2 px-4">
             <div class="row align-items-center">
@@ -34,16 +33,15 @@
                 </div>
                 <div class="col-3"></div>
                 <img src="/img/icon_fire_50_dark.png"
-                     class="col-3 d-flex justify-content-end px-4" alt="Bài viết" width="20" height="20">
+                     class="col-3 d-flex justify-content-end px-4  h-25" alt="Bài viết">
             </div>
-            <div class="row d-flex justify-content-center mt-2 dashboard-card-number">
+            <div class="row d-flex justify-content-center dashboard-card-number">
                 1.235
             </div>
             <div class="row d-flex justify-content-end dashboard-card-plus-number">
                 -13
             </div>
         </div>
-
     </div>
     <div class="col-4">
         <div class="dashboard-card pt-2 px-4">
@@ -53,15 +51,14 @@
                 </div>
                 <div class="col-3"></div>
                 <img src="/img/icon_user_50_dark.png"
-                     class="col-3 d-flex justify-content-end px-3" alt="Tài khoản" width="20" height="30">
+                     class="col-3 d-flex justify-content-end px-3  h-25" alt="Tài khoản">
             </div>
-            <div class="row d-flex justify-content-center mt-2 dashboard-card-number">
-               500
+            <div class="row d-flex justify-content-center dashboard-card-number">
+                500
             </div>
             <div class="row d-flex justify-content-end dashboard-card-plus-number">
                 +1
             </div>
         </div>
-
     </div>
 </div>
