--- a/K_Bridge/Views/Shared/Components/AdminNavigationMenu/Default.cshtml
+++ b/K_Bridge/Views/Shared/Components/AdminNavigationMenu/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿<ul class="nav flex-column" id="nav_accordion">
     <li class="nav-item sidebar-title">
-        <h5>TRANG ĐIỀU KHIỂN</h5>
+        <h5>TRANG QUẢN TRỊ</h5>
     </li>
     <li class="nav-item mt-3">
         <a class="nav-link nav-link-text" href="/admin/dashboard">
@@ -8,7 +8,7 @@
         </a>
     </li>
     <li class="nav-item mt-2">
-        <a class="nav-link nav-link-text" href="#">
+        <a class="nav-link nav-link-text" href="/Admin/Accounts">
             <img src="~/img/icon_user_50.png" class="sidebar-icon" /> Tài khoản
         </a>
     </li>
