--- a/K_Bridge/wwwroot/css/Admin.css
+++ b/K_Bridge/wwwroot/css/Admin.css
@@ -309,6 +309,7 @@ html, body {
 /*----------------------- ADMIN CREATE -----------------------*/
 .create-form-title {
     font-weight: bold;
+    margin-bottom:5px;
 }
 
 .create-padding-form {
@@ -343,7 +344,138 @@ html, body {
     color:white;
 }
 
-    .create-btn:hover {
-        background: #FFF0E6;
+.form-id {
+    display: inline-block;
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: white;
+    background-color: #A47852;
+    background-clip: padding-box;
+    border: 1px solid #493422;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: 0.375rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+    .form-id::placeholder {
+        color: white;
     }
 
+/*Custom form*/
+.form-custom {
+    display: inline-block;
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #FEF0E5;
+    background-clip: padding-box;
+    border: 1px solid #493422;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: 0.375rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+
+
+@media (prefers-reduced-motion: reduce) {
+    .form-custom {
+        transition: none;
+    }
+}
+
+.form-custom[type=file] {
+    overflow: hidden;
+}
+
+    .form-custom[type=file]:not(:disabled):not([readonly]) {
+        cursor: pointer;
+    }
+
+.form-custom:focus {
+    color: #212529;
+    background-color: #FEF0E5;
+    border-color: #86b7fe;
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem rgba(73,52,34, 0.25);
+}
+
+.form-custom::-webkit-date-and-time-value {
+    height: 1.5em;
+}
+
+.form-custom::-moz-placeholder {
+    color: #FEF0E5;
+    opacity: 1;
+}
+
+.form-custom::placeholder {
+    color: #493422;
+    opacity: 0.5;
+}
+
+.form-custom:disabled {
+    background-color: #e9ecef;
+    opacity: 1;
+}
+
+.form-custom::-webkit-file-upload-button {
+    padding: 0.375rem 0.75rem;
+    margin: -0.375rem -0.75rem;
+    -webkit-margin-end: 0.75rem;
+    margin-inline-end: 0.75rem;
+    color: #212529;
+    background-color: #e9ecef;
+    pointer-events: none;
+    border-color: inherit;
+    border-style: solid;
+    border-width: 0;
+    border-inline-end-width: 1px;
+    border-radius: 0;
+    -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.form-custom::file-selector-button {
+    padding: 0.375rem 0.75rem;
+    margin: -0.375rem -0.75rem;
+    -webkit-margin-end: 0.75rem;
+    margin-inline-end: 0.75rem;
+    color: #212529;
+    background-color: #e9ecef;
+    pointer-events: none;
+    border-color: inherit;
+    border-style: solid;
+    border-width: 0;
+    border-inline-end-width: 1px;
+    border-radius: 0;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+@media (prefers-reduced-motion: reduce) {
+    .form-custom::-webkit-file-upload-button {
+        -webkit-transition: none;
+        transition: none;
+    }
+
+    .form-custom::file-selector-button {
+        transition: none;
+    }
+}
+
+.form-custom:hover:not(:disabled):not([readonly])::-webkit-file-upload-button {
+    background-color: #dde0e3;
+}
+
+.form-custom:hover:not(:disabled):not([readonly])::file-selector-button {
+    background-color: #dde0e3;
+}
