--- a/K_Bridge/Views/Home/Index.cshtml
+++ b/K_Bridge/Views/Home/Index.cshtml
@@ -1,1 +1,7 @@
-﻿
+﻿<div class="d-flex justify-content-center align-items-center bg-main-color-background" style="height: 200vh;">
+    <!-- Nội dung của giao diện -->
+    <div>
+        <h1>Chào mừng đến với trang web của chúng tôi!</h1>
+        <p>Nội dung của trang web.</p>
+    </div>
+</div>
