--- a/K_Bridge/Views/Shared/LayoutStats.cshtml
+++ b/K_Bridge/Views/Shared/LayoutStats.cshtml
@@ -6,13 +6,13 @@
         <div class="container">
             <div class="row align-items-center cursor">
                 <div class="col-auto p-0 my-2">
-                    <img class="p-0 m-0 w-32 h-auto mt-2" src="~/img/@Url.Content(stats.LinkIcon)" alt="@stats.LinkIcon" />
+                    <img class="p-0 m-0 w-32 h-auto mt-2 img-fluid" src="~/img/@Url.Content(stats.LinkIcon)" alt="@stats.LinkIcon" />
                 </div>
                 <div class="col">
-                    <div class="row w-auto text-wrap m-0">
+                    <div class="row text-wrap m-0 d-none d-sm-flex">
                         <p class="p-0 m-0 text-color-logo fs-6">@stats.Name</p>
                     </div>
-                    <div class="row w-auto text-wrap m-0">
+                    <div class="row text-wrap m-0 d-none d-sm-flex">
                         <p class="p-0 m-0 text-color-logo fs-6">@stats.Count</p>
                     </div>
                 </div>
